--- a/html/TEMPLATE/index.html
+++ b/html/TEMPLATE/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 	<canvas></canvas>
-	<script src="thijs_lib.js"></script>
+	<script src="../../thijs_lib.js"></script>
 	<script src="main.js"></script>
     </body>
 </html>
